Modernize Java codebase with Java 17+ features
- Apply instanceof pattern matching across codebase
- Add @Serial annotation to serialVersionUID fields
- Convert String.format to .formatted where applicable
- Convert multiline strings to text blocks
- Migrate Paths.get to Path.of
- Use try-with-resources for stream handling
- Replace explicit record imports