@@ -1,5 +1,6 @@
 package tools.jackson.databind.deser;
 
+import java.io.Serial;
 import java.util.*;
 
 import com.fasterxml.jackson.annotation.*;
@@ -35,6 +36,7 @@ public class BeanDeserializerFactory
     extends BasicDeserializerFactory
     implements java.io.Serializable // since 2.1
 {
+    @Serial
     private static final long serialVersionUID = 1;
 
     /**
@@ -419,10 +421,9 @@ public class BeanDeserializerFactory
                 if (beanDescRef.getType().isAbstract()) {
                     return;
                 }
-                throw new IllegalArgumentException(String.format(
-"Invalid Object Id definition for %s: cannot find property with name %s",
-ClassUtil.getTypeDescription(beanDescRef.getType()),
-ClassUtil.name(propName)));
+                throw new IllegalArgumentException("Invalid Object Id definition for %s: cannot find property with name %s".formatted(
+                        ClassUtil.getTypeDescription(beanDescRef.getType()),
+                        ClassUtil.name(propName)));
             }
             idType = idProp.getType();
             gen = new PropertyBasedObjectIdGenerator(objectIdInfo.getScope());
@@ -905,8 +906,7 @@ ClassUtil.name(name), ((AnnotatedParameter) m).getIndex());
                         prop, mutator, valueType,
                         ctxt.findRootValueDeserializer(valueType));
             } else {
-                return ctxt.reportBadDefinition(beanDescRef.getType(), String.format(
-                        "Unsupported type for any-setter: %s -- only support `Map`s, `JsonNode` and `ObjectNode` ",
+                return ctxt.reportBadDefinition(beanDescRef.getType(), "Unsupported type for any-setter: %s -- only support `Map`s, `JsonNode` and `ObjectNode` ".formatted(
                         ClassUtil.getTypeDescription(fieldType)));
             }
         } else if (isParameter) {
@@ -932,13 +932,11 @@ ClassUtil.name(name), ((AnnotatedParameter) m).getIndex());
                 return SettableAnyProperty.constructForJsonNodeParameter(ctxt, prop, mutator, valueType,
                         ctxt.findRootValueDeserializer(valueType), parameterIndex);
             } else {
-                return ctxt.reportBadDefinition(beanDescRef.getType(), String.format(
-                    "Unsupported type for any-setter: %s -- only support `Map`s, `JsonNode` and `ObjectNode` ",
-                    ClassUtil.getTypeDescription(paramType)));
+                return ctxt.reportBadDefinition(beanDescRef.getType(), "Unsupported type for any-setter: %s -- only support `Map`s, `JsonNode` and `ObjectNode` ".formatted(
+                        ClassUtil.getTypeDescription(paramType)));
             }
         } else {
-            return ctxt.reportBadDefinition(beanDescRef.getType(), String.format(
-                    "Unrecognized mutator type for any-setter: %s",
+            return ctxt.reportBadDefinition(beanDescRef.getType(), "Unrecognized mutator type for any-setter: %s".formatted(
                     ClassUtil.nameOf(mutator.getClass())));
         }
 
