@@ -657,9 +657,8 @@ public abstract class BeanDeserializerBase
         if (_valueInstantiator.canCreateUsingDelegate()) {
             JavaType delegateType = _valueInstantiator.getDelegateType(ctxt.getConfig());
             if (delegateType == null) {
-                ctxt.reportBadDefinition(_beanType, String.format(
-"Invalid delegate-creator definition for %s: value instantiator (%s) returned true for 'canCreateUsingDelegate()', but null for 'getDelegateType()'",
-ClassUtil.getTypeDescription(_beanType), ClassUtil.classNameOf(_valueInstantiator)));
+                ctxt.reportBadDefinition(_beanType, "Invalid delegate-creator definition for %s: value instantiator (%s) returned true for 'canCreateUsingDelegate()', but null for 'getDelegateType()'".formatted(
+                        ClassUtil.getTypeDescription(_beanType), ClassUtil.classNameOf(_valueInstantiator)));
             }
             _delegateDeserializer = _findDelegateDeserializer(ctxt, delegateType,
                     _valueInstantiator.getDelegateCreator());
@@ -669,9 +668,8 @@ ClassUtil.getTypeDescription(_beanType), ClassUtil.classNameOf(_valueInstantiato
         if (_valueInstantiator.canCreateUsingArrayDelegate()) {
             JavaType delegateType = _valueInstantiator.getArrayDelegateType(ctxt.getConfig());
             if (delegateType == null) {
-                ctxt.reportBadDefinition(_beanType, String.format(
-"Invalid delegate-creator definition for %s: value instantiator (%s) returned true for 'canCreateUsingArrayDelegate()', but null for 'getArrayDelegateType()'",
-ClassUtil.getTypeDescription(_beanType), ClassUtil.classNameOf(_valueInstantiator)));
+                ctxt.reportBadDefinition(_beanType, "Invalid delegate-creator definition for %s: value instantiator (%s) returned true for 'canCreateUsingArrayDelegate()', but null for 'getArrayDelegateType()'".formatted(
+                        ClassUtil.getTypeDescription(_beanType), ClassUtil.classNameOf(_valueInstantiator)));
             }
             _arrayDelegateDeserializer = _findDelegateDeserializer(ctxt, delegateType,
                     _valueInstantiator.getArrayDelegateCreator());
@@ -916,9 +914,8 @@ ClassUtil.getTypeDescription(_beanType), ClassUtil.classNameOf(_valueInstantiato
                     PropertyName propName = objectIdInfo.getPropertyName();
                     idProp = findProperty(propName);
                     if (idProp == null) {
-                        return ctxt.reportBadDefinition(_beanType, String.format(
-"Invalid Object Id definition for %s: cannot find property with name %s",
-ClassUtil.nameOf(handledType()), ClassUtil.name(propName)));
+                        return ctxt.reportBadDefinition(_beanType, "Invalid Object Id definition for %s: cannot find property with name %s".formatted(
+                                ClassUtil.nameOf(handledType()), ClassUtil.name(propName)));
                     }
                     idType = idProp.getType();
                     idGen = new PropertyBasedObjectIdGenerator(objectIdInfo.getScope());
@@ -1089,9 +1086,8 @@ Working alternatives:
 ClassUtil.name(refName), ClassUtil.getTypeDescription(propType),
 ClassUtil.getTypeDescription(ct));
             } else {
-                msg = String.format(
-"Cannot handle managed/back reference %s: no back reference property found from type %s",
-ClassUtil.name(refName), ClassUtil.getTypeDescription(propType));
+                msg = "Cannot handle managed/back reference %s: no back reference property found from type %s".formatted(
+                        ClassUtil.name(refName), ClassUtil.getTypeDescription(propType));
             }
             return ctxt.reportBadDefinition(_beanType, msg);
         }
@@ -1100,9 +1096,8 @@ ClassUtil.name(refName), ClassUtil.getTypeDescription(propType));
         JavaType backRefType = backProp.getType();
         boolean isContainer = prop.getType().isContainerType();
         if (!backRefType.getRawClass().isAssignableFrom(referredType.getRawClass())) {
-            ctxt.reportBadDefinition(_beanType, String.format(
-"Cannot handle managed/back reference %s: back reference type (%s) not compatible with managed type (%s)",
-ClassUtil.name(refName), ClassUtil.getTypeDescription(backRefType),
+            ctxt.reportBadDefinition(_beanType, "Cannot handle managed/back reference %s: back reference type (%s) not compatible with managed type (%s)".formatted(
+                    ClassUtil.name(refName), ClassUtil.getTypeDescription(backRefType),
                     referredType.getRawClass().getName()));
         }
         return new ManagedReferenceProperty(prop, refName, backProp, isContainer);
@@ -1358,8 +1353,8 @@ ClassUtil.name(refName), ClassUtil.getTypeDescription(backRefType),
             return true;
         }
         for (SettableBeanProperty prop : _beanProperties) {
-            if (prop instanceof CreatorProperty) {
-                if (((CreatorProperty) prop).hasFallbackSetter()) {
+            if (prop instanceof CreatorProperty property) {
+                if (property.hasFallbackSetter()) {
                     return true;
                 }
             } else {
@@ -2174,11 +2169,11 @@ ClassUtil.name(refName), ClassUtil.getTypeDescription(backRefType),
         ClassUtil.throwIfError(t);
         // but note: JacksonExceptions are to be wrapped (except not DatabindException
         // but method called takes care of dealing with those)
-        if ((t instanceof RuntimeException)
+        if ((t instanceof RuntimeException exception)
                 && !(t instanceof JacksonException)) {
             boolean wrap = (ctxt == null) || ctxt.isEnabled(DeserializationFeature.WRAP_EXCEPTIONS);
             if (!wrap) { // [JACKSON-407] -- allow disabling wrapping for unchecked exceptions
-                throw (RuntimeException) t;
+                throw exception;
             }
         }
         return t;
