@@ -520,8 +520,7 @@ public class TokenBuffer
                     } else if (n instanceof String str) {
                         gen.writeNumber(str);
                     } else {
-                        throw new StreamWriteException(gen, String.format(
-                                "Unrecognized value type for VALUE_NUMBER_FLOAT: %s, cannot serialize",
+                        throw new StreamWriteException(gen, "Unrecognized value type for VALUE_NUMBER_FLOAT: %s, cannot serialize".formatted(
                                 n.getClass().getName()));
                     }
                 }
